Página de contacto vacía
Se ha añadido una página de contacto vacía para que no haya un enlace roto en el menú de navegación.
Está enlazado a su propio CSS.

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,8 +1,8 @@
-#sobre-nosotros{
+#contacto{
     max-width: 1000px;
     margin: 0 auto;
 }
-#sobre-nosotros h1{
+#contacto h1{
     padding: 60px 0;
     color: blueviolet;
 }
