--- a/css/historia.css
+++ b/css/historia.css
@@ -6,3 +6,14 @@
     padding: 60px 0;
     color: blueviolet;
 }
+
+#sobre-nosotros > div:first-child{
+    display: flex;
+    align-items: center;
+    gap: 0 10px;
+}
+
+#logo{
+    width: 45px;
+    height: 45px;
+}
