--- a/css/contacto.css
+++ b/css/contacto.css
@@ -5,11 +5,11 @@
 
 #contacto h1{
     padding: 30px 0;
-    color: blueviolet;
+    color: #7539aa;
 }
 
 .texto form fieldset {
-    border: solid 0.5px blueviolet;
+    border: solid 0.5px #7539aa;
     border-radius: 32px;
     padding: 10px 10px 10px 10px;
     margin-bottom: 40px;
