--- a/css/navBar-login.css
+++ b/css/navBar-login.css
@@ -14,6 +14,13 @@ header > div > input{
     position: relative;
     display: flex;
     padding-right: 70px;
+    width: 270px;
+    justify-content: center;
+}
+
+#div_login > button{
+    display: flex;
+    align-items: center;
 }
 
 #div_oculto_login{
@@ -40,7 +47,6 @@ header > div > input{
 
 #div_login .no_oculto{
     opacity: 1;
-    width: 290px;
     transition: all .3s;
 }
 
@@ -53,10 +59,21 @@ header > div > input{
 
 #div_oculto_login > form > fieldset{
     display: inline-flex;
-    gap: 10px 0;
+    gap: 15px 0;
     background-color: rgb(216, 216, 216);
     border-radius: 32px;
     text-align: center;
     flex-direction: column;
-    padding: 20px;
+    padding: 20px 35px;
+    width: 300px;
+}
+
+#div_oculto_login > form > fieldset > div:nth-of-type(-n+3){
+    display: grid;
+}
+
+/* Botonones de 'Acceder' y 'Registro' */
+#div_oculto_login > form > fieldset > div:last-of-type{
+    display: flex;
+
 }
