--- a/css/style.css
+++ b/css/style.css
@@ -99,33 +99,12 @@ input[type=search]::-webkit-search-cancel-button{
 	background-position-y: center;
 }
 
-button {
-	background-color: rgba(255,255,255,0.8);
-	border: none;
-	color: black;
-	padding: 10px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-flex;
-	flex-direction: row;
-	align-items: center;
-	font-size: 16px;
-	cursor: pointer;
-	border-radius: 5px;
-	outline: none;
-	transition: all .3s ease-in-out;
-}
-
-button:hover {
-	color: white;
-	background-color: #7539aa;
-}
-
 button:focus {
 	outline: none;
 }
 
-input[type=submit] {
+input[type=submit],
+button {
 	background-color: rgba(255,255,255,0.8);
 	border: none;
 	color: black;
@@ -135,13 +114,15 @@ input[type=submit] {
 	display: inline-block;
 	font-size: 16px;
 	margin: 4px 2px;
+	width: 100%;
 	cursor: pointer;
 	border-radius: 5px;
 	transition: all .3s ease-in-out;
 	outline: none;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover,
+button:hover {
 	color: white;
 	background-color: #7539aa;
 }
