--- a/css/navBar-login.css
+++ b/css/navBar-login.css
@@ -22,6 +22,9 @@ header > div > input{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #div_oculto_login{
