--- a/css/galeria.css
+++ b/css/galeria.css
@@ -18,18 +18,21 @@ main #productos .galeria-productos {
 		0 1px 3px rgba(0,0,0,0.12),
 		0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-} .galeria-productos article:hover {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+} 
+
+.galeria-productos article:hover {
 	box-shadow:
 		0 14px 28px rgba(0,0,0,0.25),
 		0 10px 10px rgba(0,0,0,0.22);
 }
 
-.galeria-productos a {
-	text-decoration: none;
-	color: black;
+.galeria-productos article .precio-producto {
 	display: flex;
 	flex-direction: column;
-	gap: 10px 0px;
+	align-items: center;
 }
 
 .galeria-productos div {
@@ -37,9 +40,6 @@ main #productos .galeria-productos {
 	justify-content: center;
 }
 
-.galeria-productos .marco-producto {
-	
-}
 .galeria-productos img {
 	max-width: 100%;
 	max-height: auto;
