--- a/css/carrito.css
+++ b/css/carrito.css
@@ -14,7 +14,7 @@
     border-radius: 32px;
 }
 
-.articulossss {
+.articulo-en-carrito {
     display: flex;
     align-items: center;
     justify-content: center;
