--- a/css/style.css
+++ b/css/style.css
@@ -51,17 +51,18 @@ nav a {
 	flex-direction: row;
 	align-items: center;
 	transition: all .3s ease-in-out;
-}
+} 	nav a:hover,
+	nav a:active {
+		text-decoration: none;
+		background-color: #7539aa;
+		color: white;
+	}	nav a:hover i,
+		nav a:active i {
+			color: white;
+		}
 
-nav a:active {
-    background-color: #7539aa;
-    color: white;
-}
-
-nav a:hover {
-	text-decoration: none;
-	background-color: #7539aa;
-	color: white;
+nav a i{
+	transition: all .3s ease-in-out;
 }
 
 nav .bi {
@@ -86,7 +87,7 @@ input[type=search] {
 }
   
 input[type=search]:focus {
-	width: 450px;
+	width: 420px;
 	outline: none;
 	border-color: #7539aa;
 }
@@ -119,12 +120,6 @@ button {
 	border-radius: 5px;
 	transition: all .3s ease-in-out;
 	outline: none;
-}
-
-input[type=submit]:hover,
-button:hover {
-	color: white;
-	background-color: #7539aa;
 }
 
 button .bi {
@@ -160,6 +155,50 @@ main h2 {
 	text-align: center;
 	font-weight: bold;
 	color: #7539aa;
+}
+
+main h3 {
+	text-align: center;
+	font-weight: medium;
+	color: #7539aa;
+}
+
+.boton-primario,
+.boton-secundario,
+.boton-terciario {
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: all .3s ease-in-out;
+	outline: none;
+}
+
+.boton-primario {
+    color: white;
+    background-color: #7539aa;
+    font-weight: bold;
+} .boton-primario:hover {
+	color: white;
+	background-color: #be91ff;
+}
+
+.boton-secundario {
+    color: #7539aa;
+    background-color: white;
+    border: solid 1px #7539aa;
+    font-weight: bold;
+} .boton-secundario:hover {
+	color: white;
+	background-color: #7539aa;
+}
+
+.boton-terciario {
+	border: none;
+	background: none;
+    color: #7539aa;
+    font-weight: bold;
+} .boton-terciario:hover {
+	color: #be91ff;
 }
 
 footer {
