--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,15 +1,8 @@
-.carrito {
+#carrito {
     margin: 30px auto;
     white-space: nowrap;
     border: solid 1px #7539aa;
     width: fit-content;
     padding: 10px 10px;
     border-radius: 32px;
-}
-
-.articulo-en-carrito {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
 }
