--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,16 @@
 	box-sizing: border-box;
 }
 
+
 body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+.oculto {
+	display: none;
 }
 
 header {
