--- a/css/galeria.css
+++ b/css/galeria.css
@@ -7,7 +7,7 @@ main #productos .galeria-productos {
 	width: 100%;
 	padding: 20px;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	gap: 20px;
 }
 
